--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
    
-    <title>华为儿童手表应用下载站</title>
+    <title>可莉下载站</title>
     <link rel="stylesheet" type="text/css" href="homestyle.css">
     <link rel="icon" type="image/x-icon" href="封面图标.png">
     <script src="searchlist.js"></script>
     <link rel="stylesheet" href="homestyle.css">
-    <meta name="keywords" content="华为儿童手表,手表,破解,应用下载站，应用分享,网页版,手表应用,应用大全,v2签名,4x,3s,4系列,3系列,智能手表" />
-    <meta name="description" content="我们的网站为您的华为手表带来无限可能!一键下载，轻松安装，让您快速体验应用。连接科技，享受便捷，一站式手表应用下载，尽在我们的网站!." />
+    <meta name="keywords" content="米兔，华为，小天才，360等手表资源尽在这，官方群内有100+资源" />
+    <meta name="description" content="来自开源项目，给你带来极好的下载体验." />
     <style>
         .center-text {
             text-align: center;
@@ -32,8 +32,8 @@
     <ul class="menu" id="menuList">
     <li><a href="index.html">首页</a></li>
     <li><a href="allAPP.html">应用库</a></li>
-    <li><a href="Navigation directory/lesson.html">破解教程</a></li>
-    <li><a href="Navigation directory/warning.html">破解警告</a></li>
+    <li><a href="Navigation directory/lesson.html">可莉博客（未完工）</a></li>
+    <li><a href="Navigation directory/warning.html">警告⚠️</a></li>
     <li><a href="Navigation directory/connect.html">联系我们</a></li>
     </ul>
 </div>
@@ -58,8 +58,8 @@
 
     <div class="t-container">
     <img src="封面图标.png" alt="封面">
-    <h1>华为儿童手表应用下载站</h1>
-    <p class="developer-info">QQ群：①奕奕交流群797541418     ②提BUG或意见QQ群：253474207</p>
+    <h1>可莉下载站</h1>
+    <p class="developer-info">QQ群：①腕上应用乐园:397920537     ②项目提BUG或意见QQ群：253474207</p>
     <p class="developer-info">开发者：@炽阳001、@e装机、@是大大帅aaa</p>
     <button onclick= "downloadApp('https://b23.tv/BV1ar42137bn')">观看手表端下载应用教程</button>
     </div>
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="app-list">
         <div class="site-description">
-    <p>欢迎来到华为儿童手表专用应用下载平台，这里汇集了众多专为华为儿童手表定制的精选应用。本平台是开源平台。若要成为开发者可以联系QQ：3083248889，vx:18280030694,加入到我们团队中来！所有安装包均已经进行了v1+v2签名，每一款应用均经过UP主亲自验证，开启adb之后，直接安装即可使用。安装前您必须要开启adb调试模式，教程请点击左上角菜单查看</p>
+    <p>欢迎来到可莉应用下载平台，这里汇集了应用。本平台是开源平台。若要成为开发者可以联系QQ：3083248889，vx:18280030694,加入到我们团队中来！所有安装包均已经进行了v1+v2签名，每一款应用均经过开发者亲自验证，开启adb之后，直接安装即可使用。安装前您必须要开启adb调试模式，本站不提供任何破解方法</p>
     <div class="center-text">
 	<h1>——本周精选——</h1>
     </div>
