--- a/allAPP.html
+++ b/allAPP.html
@@ -83,8 +83,8 @@
 <h2><ul class="nav-list" id="nav-list">
     <li><a href="index.html">返回首页</a></li>
     <li><a href="allAPP.html">应用库</a></li>
-    <li><a href="Navigation directory/lesson.html">破解教程</a></li>
-    <li><a href="Navigation directory/warning.html">破解警告</a></li>
+    <li><a href="Navigation directory/lesson.html">可莉博客（未完工）</a></li>
+    <li><a href="Navigation directory/warning.html">警告⚠️</a></li>
     <li><a href="Navigation directory/connect.html">联系我们</a></li>
 </ul></h2>
 
@@ -124,7 +124,7 @@
         </ul>
     </div>
 </div>
-<h3>——您的反馈是我们进步的动力，如果您有任何建议或遇到问题，请随时联系我们——</h3>
+<h3>——您的反馈是开发者进步的动力，如果您有任何建议或遇到问题，请随时联系开发者——</h3>
 </div>
 </div>
 
