--- a/allAPP.html
+++ b/allAPP.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <script src="allAPP/searchlist.js"></script>
     <link rel="stylesheet" href="allAPP/style.css">
-  <title>全部应用</title>
+  <title>全部网站</title>
     <style>
         .center-text2 {
     		display: flex;
@@ -137,7 +137,7 @@
                 <img src="images/搜狗输入法.png" alt="dadashuai">
         	<h2>搜狗输入法</h2>
 	        <p>使用起来非常方便，九键输入，可以说是适配最好的一款输入法，在输入界面往左滑可以进入菜单</p>
-		<button onclick="downloadApp('https://fel.forxhr.top:2022/down.php/5a411fd1ace381ee2b958e7737a746c6.apk')">下载 App</button>
+		<button onclick="downloadApp('https://baidu.com')">下载 App</button>
 	</div>
 
 	<div class="app" data-category="社交">
