--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
    
-    <title>可莉下载站</title>
+    <title>可莉导航</title>
     <link rel="stylesheet" type="text/css" href="homestyle.css">
     <link rel="icon" type="image/x-icon" href="封面图标.png">
     <script src="searchlist.js"></script>
     <link rel="stylesheet" href="homestyle.css">
-    <meta name="keywords" content="米兔，华为，小天才，360等手表资源尽在这，官方群内有100+资源" />
+    <meta name="keywords" content="网站正在更新各种网站，感谢支持！" />
     <meta name="description" content="来自开源项目，给你带来极好的下载体验." />
     <style>
         .center-text {
@@ -31,7 +31,7 @@
     </button>
     <ul class="menu" id="menuList">
     <li><a href="index.html">首页</a></li>
-    <li><a href="allAPP.html">应用库</a></li>
+    <li><a href="allAPP.html">导航大全</a></li>
     <li><a href="Navigation directory/lesson.html">可莉博客（未完工）</a></li>
     <li><a href="Navigation directory/warning.html">警告⚠️</a></li>
     <li><a href="Navigation directory/connect.html">联系我们</a></li>
@@ -58,7 +58,7 @@
 
     <div class="t-container">
     <img src="封面图标.png" alt="封面">
-    <h1>可莉下载站</h1>
+    <h1>可莉导航</h1>
     <p class="developer-info">QQ群：①腕上应用乐园:397920537     ②项目提BUG或意见QQ群：253474207</p>
     <p class="developer-info">开发者：@炽阳001、@e装机、@是大大帅aaa</p>
     <button onclick= "downloadApp('https://b23.tv/BV1ar42137bn')">观看手表端下载应用教程</button>
@@ -67,7 +67,7 @@
     <div class="container">
         <div class="app-list">
         <div class="site-description">
-    <p>欢迎来到可莉应用下载平台，这里汇集了应用。本平台是开源平台。若要成为开发者可以联系QQ：3083248889，vx:18280030694,加入到我们团队中来！所有安装包均已经进行了v1+v2签名，每一款应用均经过开发者亲自验证，开启adb之后，直接安装即可使用。安装前您必须要开启adb调试模式，本站不提供任何破解方法</p>
+    <p>欢迎来到可莉网址大全平台，这里汇集了许多网站。本平台是开源平台。若要成为开发者可以联系QQ：3083248889，vx:18280030694</p>
     <div class="center-text">
 	<h1>——本周精选——</h1>
     </div>
